# KeysVizu

./: .gitignore  Dockerfile  LICENSE  README.md  c_utils.py  config.json  kivy_config.ini  main.py  pyproject.toml
UI/menu/: note_style_preview_MIDI.mid
UI/sketches/: menu_sketches.kra  menu_sketches.kra-autosave.kra  menu_sketches.kra~
kvs/: keysvizu.kv  menu.kv  stage.kv  timeline.kv
kvs/misc/: browsers.kv  color_browser.kv  custom_buttons.kv  custom_dropdowns.kv  file_browser.kv  gradient_setting.kv  linked_fields.kv  numeric_setting.kv  style_previews.kv
kvs/settings_tabs/: export_settings.kv  particles_settings.kv  project_settings.kv  settings_tab.kv  style_settings.kv
midi_data/: Endless time MIDI.mid  lo_hi_test.mid  test_midi.mid
midi_handling/: process_midi.py  schedules.py
midi_tools/: process_midi.py  schedules.py
misc/: browsers.py  custom_buttons.py  custom_dropdowns.py  gradient_setting.py  linked_fields.py  numeric_setting.py  style_previews.py
particles/: fluids.py  fluids_demo.kv  fluids_demo.py  particle_system.cpp  particle_system.h  particle_system.pxd  particle_system_ext.cpp  particle_system_ext.pyx  particle_system_manager.py  particles_demo.py  setup.py  test.py  test_particle_system_extension.py
particles/base/: cpp_implmentation_benchmark.py  setup.py  (+6 more)
projects/: default.json
settings_tabs/: export_settings.py  particles_settings.py  project_settings.py  settings_tab.py  style_settings.py
style_presets/: default.json
theory/: note_lookup.json  scale_lookup.json
video_tools/: cleanup_util.py  test.py  video_manager.py
(+6 files in other folders)
