[tool.poetry]
name = "keysvizu"
version = "0.1.0"
description = ""
authors = ["Nicolaj Valsted"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.10"
Kivy = {extras = ["base"], version = "^2.1.0"}
opencv-python = "^4.5.5"
Cython = "^0.29.28"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
